--- a/src/styles.css
+++ b/src/styles.css
@@ -1,67 +1,67 @@
 * {
-    font-family: Arial;
-  }
-  .blue-box {
-    /* background-color: blue; */
-    width: 50%;
-  
-    display: flex;
-    flex-direction: column;
-    /* color: white; */
-    border-radius: 10px;
-    border: 2px solid #1634b8;
-    padding-bottom: 10px;
-    background-color: #1634b8;
-  }
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  h1,
-  h2 {
-    text-align: center;
-    font-weight: bold;
-  }
-  
-  button {
-    color: #1634b8;
-    background-color: #d3d8fd;
-    border-radius: 5px;
-    border: 2px solid #1634b8;
-    float: right;
-    margin-left: auto;
-  }
-  .accordion__header,
-  accordion__content {
-    margin-top: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: white;
-    color: black;
-    padding: 10px;
-    font-weight: bold;
-  }
-  .accordion__header {
-    /* border: 2px solid red; */
-    display: flex;
-    margin-left: 10px;
-  }
-  .accordion__content {
-    /* border: 2px solid orange; */
-    margin-bottom: 10px;
-    margin-left: 10px;
-    margin-right: 10px;
-    background-color: white;
-  }
-  .accordion-title {
-    margin-right: 10px;
-  }
-  h2 {
-    color: white;
-  }
-  .question {
-    margin-left: 10px;
-    margin-right: 15px;
-  }
-  
+  font-family: Arial;
+}
+
+.blue-box {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  border: 2px solid #1634b8;
+  padding-bottom: 10px;
+  background-color: #1634b8;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+h1,
+h2 {
+  text-align: center;
+  font-weight: bold;
+}
+
+button {
+  color: #1634b8;
+  background-color: #d3d8fd;
+  border-radius: 5px;
+  border: 2px solid #1634b8;
+  margin-left: 10px;
+}
+
+.accordion__header,
+.accordion__content {
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  background-color: white;
+  color: black;
+  padding: 10px;
+  font-weight: bold;
+}
+
+.accordion__header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.accordion__content {
+  margin-bottom: 10px;
+}
+
+.accordion-title {
+  margin-right: 10px;
+}
+
+h2 {
+  color: white;
+}
+
+.question {
+  margin-left: 10px;
+  margin-right: 15px;
+}
